--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
     permissions:
       contents: write
       packages: write
+      id-token: write
+      attestations: write
 
     steps:
     - name: Checkout code
@@ -36,6 +38,12 @@ jobs:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Configure package visibility
+      run: |
+        echo "Logging in to GHCR with actor: ${{ github.actor }}"
+        echo "Repository: ${{ github.repository }}"
+        echo "Image will be: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
 
     - name: Extract version from tag
       id: version
@@ -71,6 +79,7 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+        platforms: linux/amd64
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
